#
# build the analytical integral engine for 1st derivatives of eri
#
set(SRC_GINTS_ENGINE_ERI_D1
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/hgp_os_eri_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_d_d_d_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_d_d_p_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_d_d_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_d_d_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_d_f_p_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_d_f_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_d_f_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_d_p_p_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_d_p_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_d_p_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_d_s_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_d_sp_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_d_sp_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_p_d_p_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_p_d_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_p_d_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_p_f_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_p_p_p_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_p_p_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_p_p_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_p_s_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_p_sp_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_p_sp_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_s_d_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_s_p_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_s_s_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_s_sp_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_sp_d_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_sp_d_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_sp_f_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_sp_p_p_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_sp_p_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_sp_p_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_sp_s_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_sp_sp_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_d_sp_sp_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_d_d_d_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_d_d_d_d1_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_d_d_p_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_d_d_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_d_d_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_d_f_d_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_d_f_d_d1_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_d_f_d_d1_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_d_f_p_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_d_f_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_d_f_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_d_p_p_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_d_p_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_d_p_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_d_s_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_d_sp_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_d_sp_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_d_d_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_d_d_d1_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_d_d_d1_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_d_d_d1_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_d_p_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_d_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_d_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_d_sp_d1_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_d_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_d_d1_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_d_d1_deriv_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_d_d1_hrr1_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_d_d1_hrr1_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_d_d1_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_d_d1_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_d_d1_hrr2_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_d_d1_vrr_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_d_d1_vrrcont_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_d_d1_vrrcont_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_f_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_f_d1_deriv_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_f_d1_deriv_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_f_d1_hrr1_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_f_d1_hrr1_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_f_d1_hrr1_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_f_d1_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_f_d1_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_f_d1_hrr2_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_f_d1_hrr2_4.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_f_d1_vrr_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_f_d1_vrr_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_f_d1_vrrcont_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_f_d1_vrrcont_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_p_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_p_d1_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_p_d1_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_sp_d1_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_f_sp_d1_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_p_p_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_p_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_p_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_s_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_sp_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_f_sp_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_p_d_p_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_p_d_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_p_d_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_p_f_p_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_p_f_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_p_f_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_p_p_p_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_p_p_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_p_p_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_p_s_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_p_sp_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_p_sp_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_s_d_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_s_f_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_s_p_p_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_s_p_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_s_p_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_s_s_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_s_sp_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_s_sp_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_sp_d_p_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_sp_d_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_sp_d_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_sp_f_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_sp_f_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_sp_p_p_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_sp_p_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_sp_p_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_sp_s_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_sp_sp_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_f_sp_sp_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_p_p_d_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_p_p_p_p_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_p_p_p_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_p_p_p_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_p_p_s_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_p_p_sp_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_p_p_sp_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_p_s_p_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_p_s_s_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_p_s_sp_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_p_sp_d_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_p_sp_p_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_p_sp_p_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_p_sp_s_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_p_sp_sp_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_p_sp_sp_sp_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_s_s_s_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_sp_s_s_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_sp_s_sp_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_sp_sp_d_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_sp_sp_p_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_sp_sp_s_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_sp_sp_sp_s_d1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/first_deriv/eri/hgp_os_eri_sp_sp_sp_sp_d1.cpp
   )
add_library(gints_engine_eri_d1 ${SRC_GINTS_ENGINE_ERI_D1})
